# Residevs-PI-P008-TIC18

./: .gitignore  2.1trabalhando_com_array.cpp  2.2trabalhando_com_array.cpp  2.3trabalhando_com_array.cpp  3.1.1manipulando_string_tipo_c.cpp  3.1.2manipulando_string_tipo_c.cpp  3.1.3manipulando_string_tipo_c.cpp  3.2.1manipulando_string_tipo_c.cpp  3.2.2manipulando_string_tipo_c.cpp  3.2.3manipulando_string_tipo_c.cpp  4.1.manipulando_array_multidimensionais.cpp  4.2.manipulando_array_multidimensionais.cpp  4.3.1manipulando_array_multidimensionais.cpp  4.3.2manipulando_array_multidimensionais.cpp  CMakeLists.txt  Exercicio2.0.cpp  Exercicio2.1.cpp  Exercicio2.2.cpp  Exercicio3.0.cpp  Exercicio3.1.cpp  Exercicio4.0.cpp  Exercicio4.1.cpp  aleatoria.cpp  aleatoriaArray.cpp  arrays.cpp  datas.cpp  exrc2_alunos.cpp  exrc2_inteiros.cpp  exrc2_temperatura.cpp  exrc3_datas.cpp  exrc3_strings.cpp  exrc4_dez-strings.cpp  exrc4_iluminacao.cpp  imagem.cpp  notas.cpp  temperaturas.cpp
output/: 2.2trabalhando_com_array  2.3trabalhando_com_array  2a_trabalhando_com_array  3.1.3manipulando_string_tipo_c  3.1manipulando_string_tipo_c  3.2.1manipulando_string_tipo_c  3.2.3manipulando_string_tipo_c  4.1.manipulando_array_multidimensionais  4.3.2manipulando_array_multidimensionais
